--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -2,68 +2,30 @@ name: Sync Documentation to Wiki
 
 on:
   push:
-    paths:
-      - 'docs/**'
     branches:
       - main
-      - master
-  workflow_dispatch:  # Allow manual trigger
 
 jobs:
-  sync-wiki:
+  sync-docs:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        uses: actions/checkout@v3
 
-      - name: Setup Git
+      - name: Check and clean wiki directory
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          if [ -d "wiki" ]; then
+            rm -rf wiki
+          fi
 
       - name: Clone wiki repository
-        run: |
-          git clone "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki.git" wiki
-        continue-on-error: true
+        run: git clone "https://github.com/mayukhg/AIAgentTravelPlanner.wiki.git" wiki
 
-      - name: Initialize wiki if it doesn't exist
+      - name: Update wiki documentation
         run: |
-          if [ ! -d "wiki" ]; then
-            mkdir wiki
-            cd wiki
-            git init
-            git remote add origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki.git"
-            echo "# Wiki" > Home.md
-            git add Home.md
-            git commit -m "Initialize wiki"
-            git push -u origin HEAD:master
-            cd ..
-          fi
-
-      - name: Copy documentation files
-        run: |
-          cd wiki
-          # Remove old files except .git
-          find . -name "*.md" -not -path "./.git/*" -delete
-          
-          # Copy new documentation
-          cp -r ../docs/*.md .
-          
-          # Remove the docs README.md as it's not needed in wiki
-          rm -f README.md
-
-      - name: Commit and push changes
-        run: |
+          cp -r docs/* wiki/
           cd wiki
           git add .
-          if ! git diff --staged --quiet; then
-            git commit -m "Update wiki documentation from docs/ folder"
-            git push origin HEAD:master
-          else
-            echo "No changes to commit"
-          fi
+          git commit -m "Update wiki documentation from docs/ folder"
+          git push origin main
