--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Clone wiki repository
         run: git clone "https://github.com/mayukhg/AIAgentTravelPlanner.wiki.git" wiki
 
+      - name: Setup Git User
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions
+
       - name: Update wiki documentation
         run: |
           cp -r docs/* wiki/
