--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -24,9 +24,8 @@ jobs:
 
       - name: Setup Git User
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions
-
+          git config --global user.email "mayukhg@gmail.com"
+        
       - name: Update wiki documentation
         run: |
           cp -r docs/* wiki/
